# python-practice

./: .env  .gitignore  asyncSleep.py  bug.py  check_100_question_801_2025102214.xlsx  credit_to.txt  decorators.py  index.html  list_filenames_recursive.py  main.py  nodecorators.py  pyproject.toml  response_analysis.py  tornado_example.py
Ifasr_llm/: Ifasr.py  orderResult.py  text_to_sch.py
aibee_test_script/: check_100_question.py  question.py
backup/: asyncDoModelAgent.py  data_type.py  list_filenames_recursive.py  request.py  wav_to_base64.py
brand_ana_script/: 01_convert_html_to_text.py  02_extract_products_from_raw_text.py  06_brand_analysis_without_image.py
cdskp/: _chengduSkpParking.py  chengduSkpParking.py  chengduSkpParking_with_comments.py
commission_cal/: commission_calculator.py  deploy_guide.md  index.html  test_commission.py  提成计算器使用说明.md
compare_prod/: compare.py  stores_202510241428.csv  店铺对比结果_20251024_150901.txt  店铺对比详细数据_20251024_150901.csv  美食店铺801.csv  通识店铺801.csv
doubao/: doubao_lite.py  lang_chain.py
for_object_code/: mock_asyncio.py  run_task.py
get_wechat_info/: README.md  get_wechat_info.py
pic_to_prod/: 03_pic_to_hot.py  get_store_json.py  pic_to_prod.md  run_llm.py  store_json_to_pic.py
python_learning/: _error.py  _zip.py  abstract_type.py  data_type.py  for_iterable.py  for_object.py  module_practice.py  values_for_dict.py
python_tutorial/: _lambda.py  _type.py  glossary.py  turtole_try.py
qwen3/: Qwen3_32B_member_back.md  Qwen3_8B_member.md  Qwen3_test_hello.md  Qwen3_test_member.md  Qwen3_test_shop.md  qwen3.py  (+11 more)
(+73 files in other folders)
