[project]
name = "python-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.12.15",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "langchain-openai>=0.3.33",
    "openai>=1.105.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "redis>=6.4.0",
    "requests>=2.32.5",
]
